Labatt POCM Deployment to UAT 09.16.2016/objects/Budget_Load_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Alexander_Keith_s__c</fullName>
        <label>Alexander Keith&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bud_Light__c</fullName>
        <label>Bud Light</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Year__c</fullName>
        <label>Budget Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budweiser__c</fullName>
        <label>Budweiser</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAPEX_Assets__c</fullName>
        <label>CAPEX Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corona__c</fullName>
        <label>Corona</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discretionary__c</fullName>
        <label>Discretionary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <label>District Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers__c</fullName>
        <label>Drivers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goose_Island__c</fullName>
        <label>Goose Island</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Michelob__c</fullName>
        <label>Michelob</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shock_Top__c</fullName>
        <label>Shock Top</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stella_Artois__c</fullName>
        <label>Stella Artois</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_KI_Volume__c</fullName>
        <label>Target KI Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Budget Load Staging</label>
    <nameField>
        <displayFormat>BLS-{0000}</displayFormat>
        <label>Budget Load Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Load Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>